--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       with:
         path: vlib/is_thirteen
     - name: Build V
-      run: .\make.bat
+      run: .\make.bat -msvc
     # Don't move applying V directory to PATH, to other steps
     # otherwise this step and V script won't see V executable.
     - name: Build example
